--- a/Color_Magnitude_Diagram_using_Gaia_and_IRSA.ipynb
+++ b/Color_Magnitude_Diagram_using_Gaia_and_IRSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHG76WTiOT8C2tu6md7kCb",
+      "authorship_tag": "ABX9TyOKmQaIG0GCaqOHEh09eVqP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +40,60 @@
       ],
       "metadata": {
         "id": "vYm895se8JkJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#The Hertzsprung-Russell Diagram\n",
+        "The famous Hertzsprung-Russell (HR) diagram has many uses in stellar astronomy. An HR diagram shows relationships between stellar populations. This activity focuses on stars that are members of a cluster. Stars in a cluster have a common distance, age, and composition. Suppose you have magnitudes measured using different filters (brightnesses measured over a narrow range of wavelengths) for a group of stars that are known members of the same cluster. In that case, you can make a color-magnitude diagram (CMD). If filters are used to image an object, then comparing the amount of light in each filter can provide an analog for temperature in the optical. Things are different in other bands of the EM spectrum. Since magnitudes are logarithmic, a difference in magnitudes is a ratio of fluxes. See the appendix for a lot more detail. This difference is called a [color index](http://spiff.rit.edu/classes/phys440/lectures/color/color.html) based on [the star Vega](http://spiff.rit.edu/classes/phys440/lectures/color/color.html) (assuming no intervening dust). If the index is negative, the star is bluer than the standard star (Vega). If the index is positive, the star is redder than Vega. You will use actual data from the Gaia mission in the IRSA database to create a CMD for some star clusters.\n",
+        "\n",
+        "| Cluster Name | Angular Size (arcminutes) | Parallax Range | Cluster Type |\n",
+        "| --- | --- | --- | --- |\n",
+        "| [Collinder 110](https://simbad.cds.unistra.fr/simbad/sim-basic?Ident=collinder+110&submit=SIMBAD+search) | 18 | > 0.30 and < 0.50 | Open cluster |\n",
+        "| [NGC 4755](https://simbad.u-strasbg.fr/simbad/sim-basic?Ident=jewel+box&submit=SIMBAD+search) | 10 | > 0.35 and < 0.50 | Open Cluster |\n",
+        "| [Messier 13](https://simbad.cds.unistra.fr/simbad/sim-basic?Ident=m+13&submit=SIMBAD+search) | 20 | > 0.10 and < 0.20 | Globular cluster |\n",
+        "| [Melotte 71](https://simbad.cds.unistra.fr/simbad/sim-basic?Ident=melotte+71&submit=SIMBAD+search) | 9 | > 0.30 and < 0.50 | Open Cluster |\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "LpJ7kE9MnuGP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Using IRSA Viewer\n",
+        "\n",
+        "IRSA is the Infrared Science Archive and part of IPAC, which Caltech runs. Use the IRSA Viewer to search for the 3 clusters in the table. Start your search by clicking the Catalog tab at the top. Under the “Select Project” menu, select Gaia. Put the object's name from the table above in the “Object Name” text box. Be sure to match the area you search with the approximate angular size of the cluster provided in the table above. You must select “arcminutes” and then put in the size. Hit search and wait for your results to show up. <br />\n",
+        "<img src=\"https://thinkingwithcode.com/collinder_110_irsa_viewer_example.png\" width=500>\n",
+        "<br />\n",
+        "Note: If the wait is too long, you can try loading the tables from URLs under the Upload tab on IRSA Viewer. Click Upload from URL and copy and paste.\n",
+        "<br />\n",
+        "Collinder 110 \thttps://thinkingwithcode.com/datascience/collinder110_gaia_dr3.tbl<br />\n",
+        "Messier 13\thttps://thinkingwithcode.com/datascience/m13_gaia_dr3.tbl<br />\n",
+        "Melotte 71\thttps://thinkingwithcode.com/datascience/melotte71_gaia_dr3.tbl<br />\n",
+        "NGC 4755\thttps://thinkingwithcode.com/datascience/ngc4755_gaia_dr3.tbl"
+      ],
+      "metadata": {
+        "id": "9qnxNPKOq7KL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Filtering your Data\n",
+        "Not every source returned by the Gaia database is a cluster member. Let’s learn to filter our data using known distances from [Simbad](https://simbad.cds.unistra.fr/simbad/). Using the simple search on the Simbad site, search for the name of the cluster we are analyzing. Each cluster name is linked above to its Simbad entry. Find the value for the parallax. Note that the value in square brackets is the uncertainty in this value. Using these new pieces of information, let’s ask the [IRSA Viewer](https://irsa.ipac.caltech.edu/irsaviewer/) to use the Gaia database to return a list of sources in this region of the sky within the known parallax values. The results will contain mostly stars that belong to the cluster and not stars that happen to be along our line of sight that are not cluster members. Find the column called parallax in the table at the bottom of the page. Try limiting the data to values between the given parallax maximum and minimum values if the results say `0.425 [0.002]`, enter the following into the filter box on the parallax column `> 0.3 and < 0.5`. The table above has some recommended values to try putting in the parallax filter text box. Be sure to hit enter to apply the filter.\n"
+      ],
+      "metadata": {
+        "id": "MJPRvmG-sgqV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "tqRoeKiKtyas"
       }
     },
     {
@@ -214,6 +268,65 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Analysis and Questions for Each Cluster\n",
+        "1. Copy and paste your CMD plots as images into a documant. Describe the x- and y-axes to indicate which way the temperature and brightness increase. You’ll need a CMD for each cluster listed. Analyze the plots and attempt to organize the clusters from oldest to youngest. In a single sentence, give justifications for your choices. (There are some limitations here. The field could have foreground or background stars (field stars) that skew the data.)\n",
+        "\n",
+        "2. For each of the 4 clusters, describe the type of stars (main sequence, red giant, white dwarf, e.g.) and their relative presence in that particular cluster.\n",
+        "Collinder 110\n",
+        "NGC 4755\n",
+        "Messier 13\n",
+        "Melotte 71\n",
+        "\n",
+        "3. Why do we analyze clusters, and how could field stars be a problem for our CMD? And how does this make a CMD different from a typical H-R diagram?\n",
+        "\n",
+        "4. Label, mark, or describe areas like the sub-giant branch, the red giant branch, the asymptotic branch, the horizontal branch, the main sequence, the white dwarfs, etc.\n",
+        "\n",
+        "5. Remember that larger parallax angles mean closer distances. How does this visualization of the parallax values affect your interpretation of the CMD you produced?\n",
+        "\n",
+        "6. Now, calculate the distance to the cluster in parsecs using the given parallax value from Simbad. Remember d = 1/p.\n",
+        "\n",
+        "7. Describe the variability of the distribution of stars in each cluster. Discuss outliers and the difference between the shapes and features of each cluster CMD.\n"
+      ],
+      "metadata": {
+        "id": "IVsN4K56t4bh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# What to turn in\n",
+        "Create a document with your answers to the analysis questions and your CMDs. Each group needs one document. Don’t forget to include everyone in your submission!"
+      ],
+      "metadata": {
+        "id": "ht3cm7j9uADF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Thanks and Creative Commons\n",
+        "Thanks to Dr. Luisa Rebull for showing me how to use IRSA at an American Astronomical Society meeting.\n",
+        "\n",
+        "This work is released under a Creative Commons license.\n",
+        "Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0) https://creativecommons.org/licenses/by-nc-sa/4.0/\n",
+        "\n",
+        "Edited by Dr. James Newland (https://jimmynewland.com/) as a member of the BIg NITARP Alumni Project (BINAP) - https://nitarp.ipac.caltech.edu/team/89-BINAP-2024 - Last edited 2025/10/17\n",
+        "\n",
+        "For more information on the Gaia mission and Hertzsprung-Russell Diagrams, see:\n",
+        "\n",
+        "Babusiaux, C., van Leeuwen, F., Barstow, M. A., Jordi, C., Vallenari, A., Bossini, D., Bressan, A., Cantat-Gaudin, T., van Leeuwen, M., Brown, A. G. A., Prusti, T., de Bruijne, J. H. J., Bailer-Jones, C. A. L., Biermann, M., Evans, D. W., Eyer, L., Jansen, F., Klioner, S. A., Lammers, U., … Zwitter, T. (2018). Observational hertzsprung-russell diagrams. Astronomy and Astrophysics, 616. https://doi.org/10.1051/0004-6361/201832843\n",
+        "\n",
+        "For more information about using data from IRSA in the astronomy classroom, see:\n",
+        "\n",
+        "Rebull, L. M. (2024). Astronomy data in the classroom. Physics Today, 77(2), 44–50. https://doi.org/10.1063/pt.vlhh.iudp   \n"
+      ],
+      "metadata": {
+        "id": "ZDVzSJ9SuFQ0"
+      }
     }
   ]
 }
