--- a/Color_Magnitude_Diagram_using_Gaia_and_IRSA.ipynb
+++ b/Color_Magnitude_Diagram_using_Gaia_and_IRSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKmQaIG0GCaqOHEh09eVqP",
+      "authorship_tag": "ABX9TyNJpkZRKRFzJd0Qneryv24x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,15 +65,14 @@
       "source": [
         "# Using IRSA Viewer\n",
         "\n",
-        "IRSA is the Infrared Science Archive and part of IPAC, which Caltech runs. Use the IRSA Viewer to search for the 3 clusters in the table. Start your search by clicking the Catalog tab at the top. Under the “Select Project” menu, select Gaia. Put the object's name from the table above in the “Object Name” text box. Be sure to match the area you search with the approximate angular size of the cluster provided in the table above. You must select “arcminutes” and then put in the size. Hit search and wait for your results to show up. <br />\n",
-        "<img src=\"https://thinkingwithcode.com/collinder_110_irsa_viewer_example.png\" width=500>\n",
-        "<br />\n",
-        "Note: If the wait is too long, you can try loading the tables from URLs under the Upload tab on IRSA Viewer. Click Upload from URL and copy and paste.\n",
-        "<br />\n",
-        "Collinder 110 \thttps://thinkingwithcode.com/datascience/collinder110_gaia_dr3.tbl<br />\n",
-        "Messier 13\thttps://thinkingwithcode.com/datascience/m13_gaia_dr3.tbl<br />\n",
-        "Melotte 71\thttps://thinkingwithcode.com/datascience/melotte71_gaia_dr3.tbl<br />\n",
-        "NGC 4755\thttps://thinkingwithcode.com/datascience/ngc4755_gaia_dr3.tbl"
+        "IRSA is the Infrared Science Archive and part of IPAC, which Caltech runs. Use the IRSA Viewer to search for the 3 clusters in the table. Start your search by clicking the Upload tab at the top. Load the tables from URLs under the Upload tab on IRSA Viewer. Click Upload from URL and copy and paste. Then click the Load Table button at the bottom. This should load the table into the Results tab.\n",
+        "<br /><br />\n",
+        "* Collinder 110 - https://thinkingwithcode.com/datascience/collinder110_gaia_dr3.tbl<br />\n",
+        "* Messier 13 - https://thinkingwithcode.com/datascience/m13_gaia_dr3.tbl<br />\n",
+        "* Melotte 71 - https://thinkingwithcode.com/datascience/melotte71_gaia_dr3.tbl<br />\n",
+        "* NGC 4755 - https://thinkingwithcode.com/datascience/ngc4755_gaia_dr3.tbl\n",
+        "<br /><br />\n",
+        "<img src=\"https://thinkingwithcode.com/datascience/collinder_110_irsa_viewer_example_table_load.png\" width=500>"
       ],
       "metadata": {
         "id": "9qnxNPKOq7KL"
@@ -87,13 +86,6 @@
       ],
       "metadata": {
         "id": "MJPRvmG-sgqV"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "tqRoeKiKtyas"
       }
     },
     {
@@ -112,8 +104,7 @@
         "!pip install -U astroquery"
       ],
       "metadata": {
-        "id": "HNLz3eKjP15u",
-        "cellView": "form"
+        "id": "HNLz3eKjP15u"
       },
       "execution_count": null,
       "outputs": []
@@ -122,8 +113,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "2UCbAc9FPizj",
-        "cellView": "form"
+        "id": "2UCbAc9FPizj"
       },
       "outputs": [],
       "source": [
@@ -146,8 +136,7 @@
         "    'https://thinkingwithcode.com/datascience/ngc4755_gaia_dr3.tbl']      # NGC 4755 at index 0"
       ],
       "metadata": {
-        "id": "HqO8ayvIQRin",
-        "cellView": "form"
+        "id": "HqO8ayvIQRin"
       },
       "execution_count": null,
       "outputs": []
@@ -170,13 +159,12 @@
       "cell_type": "code",
       "source": [
         "# @title Load A Single Cluster as a Table and Create a Dataframe\n",
-        "\n",
+        "# change the number in clusters[ ... ] to select a given cluster\n",
         "t = Table.read(clusters[0], format='ascii.ipac')\n",
         "df = t.to_pandas()"
       ],
       "metadata": {
-        "id": "pJehFHV3TmgI",
-        "cellView": "form"
+        "id": "pJehFHV3TmgI"
       },
       "execution_count": null,
       "outputs": []
@@ -184,7 +172,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Load and Reduce the Data and Plot"
+        "# Load and Reduce the Data and Plot"
       ],
       "metadata": {
         "id": "aJWRLVm9PaKr"
@@ -194,11 +182,13 @@
       "cell_type": "code",
       "source": [
         "# @title Filter the Parallax Values\n",
-        "df_filtered = df[(df['parallax'] > 0.30) & (df['parallax'] < 0.50)]"
+        "# use the ranges in the table above for your selected cluster\n",
+        "lower = 0.30\n",
+        "upper = 0.50\n",
+        "df_filtered = df[(df['parallax'] > lower) & (df['parallax'] < upper)]"
       ],
       "metadata": {
-        "id": "6bqB_TGmXEqT",
-        "cellView": "form"
+        "id": "6bqB_TGmXEqT"
       },
       "execution_count": null,
       "outputs": []
@@ -211,8 +201,7 @@
         "  return app_mag - (5 - 5*np.log10(1000/parallax))"
       ],
       "metadata": {
-        "id": "WFmoUHpLWlpN",
-        "cellView": "form"
+        "id": "WFmoUHpLWlpN"
       },
       "execution_count": null,
       "outputs": []
@@ -225,8 +214,7 @@
         "df_filtered['abs_mag'] = abs_mag"
       ],
       "metadata": {
-        "id": "g3eaH_aTb2XX",
-        "cellView": "form"
+        "id": "g3eaH_aTb2XX"
       },
       "execution_count": null,
       "outputs": []
@@ -235,10 +223,9 @@
       "cell_type": "code",
       "source": [
         "# @title Display First Rows of Table for Inspection\n",
-        "display(df_filtered[['bp_rp', 'parallax', 'abs_mag']].head(10))"
+        "display(df_filtered[['bp_rp', 'parallax', 'abs_mag']].head())"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "TpHUVCY_wJBH"
       },
       "execution_count": null,
@@ -247,13 +234,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title Plot Color-Magnitude Diagram (CMD)\n",
+        "# @title CMD using MatPlotLib\n",
         "fig, ax = plt.subplots()\n",
         "\n",
         "x = df_filtered['bp_rp']\n",
         "y = df_filtered['abs_mag']\n",
+        "c = df_filtered['parallax']\n",
         "\n",
-        "ax.scatter(x, y, s=1)\n",
+        "scatter = ax.scatter(x, y, c=c, cmap='rainbow', s=1)\n",
+        "fig.colorbar(scatter, ax=ax, label='Parallax')\n",
         "\n",
         "ax.set_xlabel('Color Index (b - p)')\n",
         "ax.set_ylabel('Absolute Magnitude (g)')\n",
@@ -263,8 +252,7 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "utV1xigcefq6",
-        "cellView": "form"
+        "id": "utV1xigcefq6"
       },
       "execution_count": null,
       "outputs": []
@@ -273,13 +261,16 @@
       "cell_type": "markdown",
       "source": [
         "# Analysis and Questions for Each Cluster\n",
-        "1. Copy and paste your CMD plots as images into a documant. Describe the x- and y-axes to indicate which way the temperature and brightness increase. You’ll need a CMD for each cluster listed. Analyze the plots and attempt to organize the clusters from oldest to youngest. In a single sentence, give justifications for your choices. (There are some limitations here. The field could have foreground or background stars (field stars) that skew the data.)\n",
         "\n",
-        "2. For each of the 4 clusters, describe the type of stars (main sequence, red giant, white dwarf, e.g.) and their relative presence in that particular cluster.\n",
-        "Collinder 110\n",
-        "NGC 4755\n",
-        "Messier 13\n",
-        "Melotte 71\n",
+        "You can return the top of this notebook and change the code for each cluster to load the data and then to filter the data. Then re-run the notebook with the new table and new filter values.\n",
+        "\n",
+        "1. Screenshot and upload your CMD plots as images into this cell (double-click to edit). Describe the x- and y-axes to indicate which way the temperature and brightness increase. You’ll need a CMD for each cluster listed. Analyze the plots and attempt to organize the clusters from oldest to youngest. In a single sentence, give justifications for your choices. (There are some limitations here. The field could have foreground or background stars (field stars) that skew the data.)\n",
+        "\n",
+        "2. For each of the 4 clusters, describe the type of stars (main sequence, red giant, white dwarf, e.g.) and their relative presence in that particular cluster. (double-click to edit)\n",
+        "* Collinder 110\n",
+        "* NGC 4755\n",
+        "* Messier 13\n",
+        "* Melotte 71\n",
         "\n",
         "3. Why do we analyze clusters, and how could field stars be a problem for our CMD? And how does this make a CMD different from a typical H-R diagram?\n",
         "\n",
