--- a/Color_Magnitude_Diagram_using_Gaia_and_IRSA.ipynb
+++ b/Color_Magnitude_Diagram_using_Gaia_and_IRSA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJpkZRKRFzJd0Qneryv24x",
+      "authorship_tag": "ABX9TyNr/52maXHo8Ll7g0G071lR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,34 +58,6 @@
       ],
       "metadata": {
         "id": "LpJ7kE9MnuGP"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Using IRSA Viewer\n",
-        "\n",
-        "IRSA is the Infrared Science Archive and part of IPAC, which Caltech runs. Use the IRSA Viewer to search for the 3 clusters in the table. Start your search by clicking the Upload tab at the top. Load the tables from URLs under the Upload tab on IRSA Viewer. Click Upload from URL and copy and paste. Then click the Load Table button at the bottom. This should load the table into the Results tab.\n",
-        "<br /><br />\n",
-        "* Collinder 110 - https://thinkingwithcode.com/datascience/collinder110_gaia_dr3.tbl<br />\n",
-        "* Messier 13 - https://thinkingwithcode.com/datascience/m13_gaia_dr3.tbl<br />\n",
-        "* Melotte 71 - https://thinkingwithcode.com/datascience/melotte71_gaia_dr3.tbl<br />\n",
-        "* NGC 4755 - https://thinkingwithcode.com/datascience/ngc4755_gaia_dr3.tbl\n",
-        "<br /><br />\n",
-        "<img src=\"https://thinkingwithcode.com/datascience/collinder_110_irsa_viewer_example_table_load.png\" width=500>"
-      ],
-      "metadata": {
-        "id": "9qnxNPKOq7KL"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Filtering your Data\n",
-        "Not every source returned by the Gaia database is a cluster member. Let’s learn to filter our data using known distances from [Simbad](https://simbad.cds.unistra.fr/simbad/). Using the simple search on the Simbad site, search for the name of the cluster we are analyzing. Each cluster name is linked above to its Simbad entry. Find the value for the parallax. Note that the value in square brackets is the uncertainty in this value. Using these new pieces of information, let’s ask the [IRSA Viewer](https://irsa.ipac.caltech.edu/irsaviewer/) to use the Gaia database to return a list of sources in this region of the sky within the known parallax values. The results will contain mostly stars that belong to the cluster and not stars that happen to be along our line of sight that are not cluster members. Find the column called parallax in the table at the bottom of the page. Try limiting the data to values between the given parallax maximum and minimum values if the results say `0.425 [0.002]`, enter the following into the filter box on the parallax column `> 0.3 and < 0.5`. The table above has some recommended values to try putting in the parallax filter text box. Be sure to hit enter to apply the filter.\n"
-      ],
-      "metadata": {
-        "id": "MJPRvmG-sgqV"
       }
     },
     {
@@ -172,7 +144,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Load and Reduce the Data and Plot"
+        "#Load and Reduce the Data and Plot\n",
+        "\n",
+        "Not every source returned by the Gaia database is a cluster member. Let’s learn to filter our data using known distances from [Simbad](https://simbad.cds.unistra.fr/simbad/). Using the simple search on the Simbad site, search for the name of the cluster we are analyzing. Each cluster name is linked above to its Simbad entry. Find the value for the parallax. Note that the value in square brackets is the uncertainty in this value. The filtered data will contain mostly stars that belong to the cluster and not stars that happen to be along our line of sight that are not cluster members. Try limiting the data to values between the given parallax maximum and minimum values if the results say `0.425 [0.002]`, enter the following into the filter cell below `lower = 0.3` and `upper = 0.5`. The table above has some recommended values to try putting in the parallax filter text box. Be sure to rerun this code block apply the filter."
       ],
       "metadata": {
         "id": "aJWRLVm9PaKr"
@@ -230,6 +204,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Plot Data as Color-Magnitude Diagram"
+      ],
+      "metadata": {
+        "id": "1mK2jRHC3CLy"
+      }
     },
     {
       "cell_type": "code",
